Fix preview width on firefox

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
 }
 
 .preview-content {
+    width: 100%;
     display: block;
     aspect-ratio: 16 / 10;
 }
